Create a landingpage update route
