# src/openapi.yaml
@@ -75,6 +75,32 @@ paths:
           $ref: "#/components/responses/ServerError"
       security:
         - {}
+    put:
+      operationId: putLandingpage
+      tags:
+        - Capabilities
+      summary: Update dataset metadata
+      description: Update the title, description and keywords of the dataset
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                abstract:
+                  type: string
+                keywords:
+                  type: array
+                  items:
+                    type: string
+      responses:
+        200:
+          description: Metadata updated successfully
+        400:
+          $ref: "#/components/responses/ServerError"
   /conformance:
     get:
       operationId: getConformance
